Fix app menu popover alignment

--- a/core/css/header.scss
+++ b/core/css/header.scss
@@ -440,7 +440,6 @@ nav {
 	display: inline-block;
 	width: auto;
 	clear: both;
-	height: 44px;
 
 	li {
 		float: left;
@@ -462,7 +461,7 @@ nav {
 		}
 	}
 	.app-loading .icon-loading-small-dark {
-		top:12px;
+		top: 12px;
 		width: 20px;
 		height: 20px;
 	}
@@ -495,7 +494,7 @@ nav {
 		color: rgba($color-main-text, .7);
 		width: auto;
 		left: 50%;
-		top: 45px;
+		top: 100%;
 		transform: translateX(-50%);
 		padding: 4px 10px;
 		filter: drop-shadow(0 1px 10px $color-box-shadow);
